# ourportfolios

./: .env  .gitignore  CHANGELOG.md  README.md  lab.ipynb  main.py  pyproject.toml  rxconfig.py  tickers_progress.csv
.github/workflows/: release.yml  semantic-update.yml  stock_etl.yml
assets/: chart.js  dot-grid.js
db/: connect.py  lab.ipynb  load_data.py  populate_db.py  preprocess_texts.py
db/sql/ticker/: tickers.sql
ourportfolios/: ourportfolios.py
ourportfolios/components/: __init__.py  cards.py  common.py  dialog.py  drawer.py  financial_statement.py  graph.py  link_card.py  link_cards.py  loading.py  metric_cards.py  navbar.py  news_card.py  page_roller.py  page_selection.py  price_chart.py  search_bar.py  ticker_board.py
ourportfolios/database/: etl.py  fetch_data.py
ourportfolios/pages/: __init__.py  analyze.py  compare.py  landing.py  landing_industry.py  landing_ticker.py  recommend.py  select.py
ourportfolios/pages/analyze/: __init__.py  index.py
ourportfolios/pages/compare/: __init__.py
ourportfolios/pages/industry_analysis/: __init__.py  index.py
ourportfolios/pages/landing/: __init__.py  index.py
ourportfolios/pages/recommend/: __init__.py  add_framework_dialog.py  framework_cards.py  framework_dialog.py  index.py  state.py
ourportfolios/state/: __init__.py  cart_state.py  comparison_state.py  framework_state.py  search_state.py  ticker_board_state.py
ourportfolios/utils/: compute_instrument.py  generate_query.py  load_data.py  populate_db.py  scheduler.py
test/: chart.py  filter.py  scheduler.py  temp.py
(+24 files in other folders)
