[project]
name = "ourportfolios"
version = "0.0.2"
description = "An investment strategy analyzing platform"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "reflex>=0.7.13",
  "vnstock>=3.2.6",
]

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
commit_parser = "conventional"

[tool.semantic_release.commit_parser_options]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]
other_allowed_tags = ["build", "chore", "ci", "docs", "style", "refactor", "test"]
parse_squash_commits = true
ignore_merge_commits = true

# === BRANCHES MUST BE A MAP, NOT AN ARRAY ===
[tool.semantic_release.branches]
"*"  = { match = ".*",             prerelease = false }
main = { match = "(main|master)$", prerelease = false }

[tool.semantic_release.changelog]
mode = "update"
insertion_flag = "<!-- version list -->"
template_dir = "templates"

[tool.semantic_release.changelog.default_templates]
changelog_file   = "CHANGELOG.md"
output_format    = "md"
mask_initial_release = true

[tool.semantic_release.remote]
name             = "origin"
type             = "github"
upload_to_release = true
upload_to_pypi    = false
tag_format        = "{version}"
